--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,45 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+    sans-serif;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+  @apply hover:text-[#8ad6f1] transition duration-200 ease-in-out underline;
+}
+
+.hover-trans {
+  @apply hover:text-[#8ad6f1] transition duration-200 ease-in-out underline;
 }
 
 * {
   box-sizing: border-box;
+}
+
+code {
+  @apply bg-gray-600 text-xs p-1 rounded-md;
+}
+
+@layer utilities {
+  .flex-center,
+  .flex-center-row {
+    @apply flex items-center justify-center;
+  }
+  .flex-center-col {
+    @apply flex flex-col items-center justify-center;
+  }
+
+  .text-gradient {
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 }
